@@ -1,7 +1,7 @@
 TODO
 ====
 
-Readings:  base64 encoding of floating point numbers. Mask and shift transforms.
+Readings - Mask and shift transforms.
 
 Discovery endpoint - Only enable new devices which match a provisionwatcher.
 These to be dynamically created according to configuration.
